<resources>

    <string name="app_name" translatable="false">tcode</string>


    <string name="input_vip_num">会员号输入</string>
    <string name="Customer_service_hotline">客服热线：0755-23208137 | 关于我们</string>
    <string name="Chuanguo_digital_wisdom_store">传果数字智慧门店</string>
    <string name="Community_Life_Supermarket">社区生活超市</string>
    <string name="Please_enter_your_account_number">请输入账号</string>
    <string name="Please_enter_your_password">请输入密码</string>
    <string name="Please_enter_your_registration_code">请输入注册码</string>
    <string name="confirm">确定</string>

    <string name="txt_searchf">搜索(F1)</string>
    <string name="txt_input_worker">请输入工号 姓名</string>
    <string name="txt_fun_keyborad_shortcut">功能快捷键</string>
    <string name="txt_shift_order_txt">交接交班单</string>
    <string name="txt_shift_product_txt">商品对账单</string>
    <string name="txt_shift_categroy_txt">类别对账单</string>
    <string name="txt_shift_shop">门店：</string>
    <string name="txt_shift_pos">POS机号：</string>
    <string name="txt_shift_date">交班日期：</string>
    <string name="txt_shift_bus">收银员：</string>
    <string name="txt_shift_head_order">首笔：</string>
    <string name="txt_shift_tail_order">末笔：</string>
    <string name="txt_shift_order_count">交易笔数：</string>
    <string name="txt_shift_received_ways">收款方式</string>
    <string name="txt_shift_received_money">金额</string>
    <string name="txt_shift_received_count">笔数</string>
    <string name="txt_shift_rmb">人民币：</string>
    <string name="txt_shift_card">储值卡：</string>
    <string name="txt_shift_cash_detail">现金收支明细：</string>
    <string name="txt_shift_income">消费现金收入：</string>
    <string name="txt_shift_card_recharge"> 储值卡现金充值：</string>
    <string name="txt_shift_plus"> 购买Plus会员现金：</string>
    <string name="txt_shift_project"> 计次项目现金充值：</string>
    <string name="txt_shift_cash_back"> 消费现金退款：</string>
    <string name="txt_shift_card_back"> 储值现金退款：</string>
    <string name="txt_shift_spare"> 备用金：</string>
    <string name="txt_shift_all"> 交班应缴款：</string>
    <string name="txt_shift_rmb_cash"> 人民币现金：</string>
    <string name="txt_goods_rejected">退货</string>
    <string name="txt_goods_cancel">取消(Esc)</string>
    <string name="txt_goods_confirm">确定(Enter)</string>
    <string name="txt_goods_allcheck">全选(A)</string>
    <string name="txt_goods_tips">提示：可进行“↑ ↓”进行切换，F1选中/反选，再按“Enter”确定</string>
    <string name="txt_goods_sequence">序号</string>
    <string name="txt_goods_code">编码/条码</string>
    <string name="txt_goods_brand">品名</string>
    <string name="txt_goods_rejected_num">退数量</string>
    <string name="txt_goods_sale_price">售价</string>
    <string name="txt_goods_rejected_money">退金额</string>
    <string name="txt_goods_is_rejected">是否退</string>
    <string name="txt_goods_check">查询</string>
    <string name="txt_goods_check_hint">请输入单号</string>
    <string name="txt_goods_rejected_reason">请选择退货原因</string>
    <string name="txt_hang_title">挂单信息</string>
    <string name="txt_hang_delete">删除</string>
    <string name="txt_hang_take">取单</string>
    <string name="txt_hang_order_detail">【订单详情】</string>
    <string name="txt_hang_order_num">单号</string>
    <string name="txt_timer">时间</string>
    <string name="txt_money">金额</string>
    <string name="txt_count">数量</string>
    <string name="txt_money_total">小计</string>
    <string name="txt_casher">收银员</string>
    <string name="txt_total">合计</string>
    <string name="txt_product_name">品名</string>
    <string name="txt_product_price">售价</string>
    <string name="txt_categroy_name">类别名称</string>



    <string name="txt_welcome_use">欢迎使用</string>
    <string name="txt_start_cash">开始自助结账</string>
    <string name="txt_vip">会员</string>
    <string name="txt_not_vip">非会员</string>
    <string name="txt_actionbar_title">*免儿</string>
    <string name="txt_actionbar_content">取消交易(%s)</string>
    <string name="txt_set">设置</string>
    <string name="txt_quit">退出</string>
    <string name="txt_back_home">返回首页</string>
    <string name="txt_back_login">返回登录</string>
    <string name="txt_back_order">返回订单</string>
    <string name="txt_authorize">授权</string>
    <string name="txt_account">账号</string>
    <string name="txt_password">密码</string>
    <string name="txt_input_account">请输入账号</string>
    <string name="txt_input_password">请输入密码</string>
    <string name="txt_input_phone">输手机号</string>
    <string name="txt_scan_vip_code">扫会员码</string>
    <string name="txt_scan_face">刷脸登录</string>
    <string name="txt_select_login_way">请选择会员登录方式</string>
    <string name="txt_input_register_vip">请输入注册会员的</string>
    <string name="txt_11_phone">11位手机号</string>
    <string name="txt_phone_num_error">*请输入正确的11位手机号</string>
    <string name="txt_open_vip_code">请打开会员二维码</string>
    <string name="txt_scan_code_login">扫码登录</string>
    <string name="txt_look_camera">请抬头面向摄像头</string>
    <string name="txt_face_login">刷脸登录</string>
    <string name="txt_please_sacn">请扫条码</string>
    <string name="txt_please_aim">将商品条码对准扫描口</string>
    <string name="txt_continue_add">请继续扫描商品条码添加商品</string>
    <string name="txt_hand_input">手动输入条码</string>
    <string name="txt_scan_total_num">(共%s件)</string>
    <string name="txt_scan_total_price">￥%s</string>
    <string name="txt_scan_go_pay">去支付</string>
    <string name="txt_confirm">确认</string>
    <string name="txt_hand_input_code">手输条码</string>
    <string name="txt_input_produce_code">请输入商品条码</string>
    <string name="txt_accounts_money">结账金额</string>
    <string name="txt_face_pay">刷脸支付</string>
    <string name="txt_scan_pay">扫码支付</string>
    <string name="txt_aim_paycode">请将付款码对准扫描口</string>
    <string name="txt_wx_pay">微信支付</string>
    <string name="txt_alipay">支付宝</string>
    <string name="txt_vip_code">会员码</string>
    <string name="txt_retry_pay">重选支付</string>
    <string name="txt_pay_ok">支付成功</string>
    <string name="txt_pay_ok_tips">请携带好您的商品及随身物品</string>
    <string name="version_update">版本更新</string>
    <string name="discover_version">发现新版本</string>









    <string name="share_scheme" translatable="false">consumer</string>
    <string name="login_agreement" translatable="false">“使用协议和隐私政策”</string>
    <string name="login_agree_to_a_deal" translatable="false">登录/注册表示同意</string>
    <string name="login_edt_phone" translatable="false">请输入11位手机号</string>
    <string name="login_edt_phone_code" translatable="false">请输入验证码</string>
    <string name="login_edt_phone_psw" translatable="false">请输入6-20位密码</string>
    <string name="login_confirm_login" translatable="false">确认登录</string>

    <string name="get" translatable="false">领取</string>
    <string name="manage_channel" translatable="false">频道管理</string>
    <string name="my_cahnnel" translatable="false">我的频道</string>
    <string name="tip_drag" translatable="false">点击删除频道</string>
    <string name="edit" translatable="false">编辑</string>
    <string name="finish" translatable="false">完成</string>
    <string name="other_channel" translatable="false">其他频道</string>

    <string name="other_channel_click_add" translatable="false">点击添加频道</string>
    <string name="other_channel_click_remove" translatable="false">最多16个频道，请删除一些</string>
    <string name="other_channel_click_five_remove" translatable="false">最多16个频道，请删除一些</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home" translatable="false">首页</string>
    <string name="movie" translatable="false">免费看</string>
    <string name="task" translatable="false">赚钱</string>
    <string name="mine" translatable="false">我的</string>
    <string name="lingqu" translatable="false">领取</string>
    <string name="picture_manager_title" translatable="false">拖动下方按钮可调整顺序</string>
    <string name="picture_manager_other_title" translatable="false">点击可添加图集</string>
    <string name="move_view_tip" translatable="false">打开游戏悬浮窗功能</string>




    <string name="shop_phone">0755-86667601</string>
    <string name="gaode_map_key">c376109cb760ff4aed201853c9397b6c</string>

    <string name="agreement">《用户协议》</string>
    <string name="contact">联系人</string>
    <string name="contact_phone_number">联系电话</string>
    <string name="shipping_address">收货地址</string>
    <string name="detailed_address">详细地址</string>
    <string name="sure">确定</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="delete_this_address">删除该地址</string>
    <string name="add_new_address">新增地址</string>
    <string name="home_page">首页</string>
    <string name="order">订单</string>
    <string name="all_search">全部搜索</string>
    <string name="user_img">头像</string>
    <string name="user_othername">呢称</string>
    <string name="user_gender">性别</string>
    <string name="mine_address">我的地址</string>
    <string name="mine_coupon">我的优惠</string>
    <string name="vip_center">会员中心</string>
    <string name="open_vip">开通会员</string>
    <string name="vip_card_detail">会员卡详情</string>
    <string name="check_update">检查更新</string>
    <string name="about_mine">关于我们</string>
    <string name="mine_collection">我的收藏</string>
    <string name="edit_tips">请输入商家、商品名称</string>
    <string name="select_goods_tips">请输入商品名搜索</string>
    <string name="has_no_collection">您还没有收藏店铺哦</string>
    <string name="hint_edit_nickname">请输入昵称（最多20字）</string>
    <string name="location_fail">定位失败，请检查权限是否开启!</string>
    <string name="not_network">网络不给力哦，请检查网络是否连接！</string>
    <string name="no_coupon_use">无可用优惠券</string>

    <!--选择时间控件相关-->
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year"> </string>
    <string name="pickerview_month"> </string>
    <string name="pickerview_day"> </string>
    <string name="pickerview_hours"> </string>
    <string name="pickerview_minutes"> </string>
    <string name="pickerview_seconds"> </string>
    <string name="bangmai_tip">就近购支持2公里内的商品，若超出范围请与跑男协商</string>
    <string-array name="buy_type">
        <item>随意购</item>
        <item>咖啡</item>
        <item>香烟</item>
        <item>酒</item>
        <item>早餐</item>
        <item>宵夜</item>
        <item>生鲜</item>
        <item>水果</item>
        <item>生活用品</item>
        <item>五金杂货</item>
        <item>数码</item>
    </string-array>
    <string-array name="take_type">
        <item>其他</item>
        <item>快递</item>
        <item>美食</item>
        <item>文件</item>
        <item>蛋糕</item>
        <item>鲜花</item>
        <item>钥匙</item>
        <item>手机</item>
    </string-array>
    <string-array name="send_type">
        <item>其他</item>
        <item>美食</item>
        <item>文件</item>
        <item>蛋糕</item>
        <item>鲜花</item>
        <item>钥匙</item>
        <item>手机</item>
    </string-array>
    <string-array name="line_type">
        <item>万能排队</item>
        <item>医院排队</item>
        <item>办事排队</item>
        <item>银行排队</item>
        <item>餐厅排队</item>
    </string-array>

</resources>