<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/dp_18"
    android:paddingRight="@dimen/dp_26"
    android:paddingTop="@dimen/dp_7">
    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        tools:text="@string/txt_product_name"
        android:textSize="@dimen/sp_9"
        android:textColor="@color/c_202020"/>
    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        tools:text="@string/txt_product_price"
        android:textSize="@dimen/sp_9"
        android:gravity="right"
        android:textColor="@color/c_202020"/>
    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        tools:text="@string/txt_count"
        android:textSize="@dimen/sp_9"
        android:gravity="right"
        android:textColor="@color/c_202020"/>
    <TextView
        android:id="@+id/tv_money"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        tools:text="@string/txt_money"
        android:textSize="@dimen/sp_9"
        android:gravity="right"
        android:textColor="@color/c_202020"/>
</LinearLayout>