<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_25"
    android:id="@+id/root_view"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tv_num"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/c_202020"
        android:textSize="@dimen/sp_9"
        tools:text="@string/txt_goods_sequence"
        android:gravity="center"/>
    <TextView
        android:id="@+id/tv_code"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textColor="@color/c_202020"
        android:textSize="@dimen/sp_9"
        tools:text="@string/txt_goods_code"
        android:gravity="center"/>
    <TextView
        android:id="@+id/tv_brand"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:textColor="@color/c_202020"
        android:textSize="@dimen/sp_9"
        tools:text="@string/txt_goods_brand"
        android:gravity="center"/>
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5">
        <TextView
            android:id="@+id/tv_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/c_202020"
            android:textSize="@dimen/sp_9"
            tools:text="@string/txt_goods_rejected_num"
            android:gravity="center"
            android:visibility="gone"/>
<!--        <com.transpos.market.view.AmountView-->
<!--            android:id="@+id/amount_view"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            app:btnTextSize="11px"-->
<!--            app:tvTextSize="8px"-->
<!--            app:btnWidth="@dimen/dp_20"-->
<!--            android:layout_margin="@dimen/dp_4"/>-->
    </FrameLayout>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/c_202020"
        android:textSize="@dimen/sp_9"
        tools:text="@string/txt_goods_sale_price"
        android:gravity="center"/>
    <TextView
        android:id="@+id/tv_rprice"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/c_202020"
        android:textSize="@dimen/sp_9"
        tools:text="@string/txt_goods_rejected_money"
        android:gravity="center"/>
    <ImageView
        android:id="@+id/iv_check"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_reason_check"
        />
</LinearLayout>