<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_marginBottom="@dimen/dp_17"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:background="@drawable/shape_white_5dp">
        <RelativeLayout
            android:id="@+id/rl_top"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_27"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:text="@string/txt_goods_rejected"/>
            <FrameLayout
                android:id="@+id/fl_close"
                android:layout_width="@dimen/dp_30"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true">
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/iv_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/close" />
            </FrameLayout>

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ll_left"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHorizontal_weight="2.6"
            app:layout_constraintTop_toBottomOf="@id/rl_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/rl_right"
            app:layout_constraintBottom_toTopOf="@+id/ic_tips"
            android:orientation="vertical"
            android:background="@drawable/shape_white_line_r2"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginBottom="@dimen/dp_7">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_27"
                android:orientation="horizontal"
                android:background="@color/color_44cbc0">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_9"
                    android:text="@string/txt_goods_sequence"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_9"
                    android:text="@string/txt_goods_code"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_9"
                    android:text="@string/txt_goods_brand"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_9"
                    android:text="@string/txt_goods_rejected_num"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_9"
                    android:text="@string/txt_goods_sale_price"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_9"
                    android:text="@string/txt_goods_rejected_money"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_9"
                    android:text="@string/txt_goods_is_rejected"
                    android:gravity="center"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_goods"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_24"
                android:layout_marginLeft="@dimen/dp_1"
                android:layout_marginRight="@dimen/dp_1"
                android:layout_marginBottom="@dimen/dp_1"
                android:background="@color/color_f7f8fa">
                <TextView
                    android:id="@+id/tv_rejected_num"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_12"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:textColor="@color/c_202020"
                    tools:text="退数量：1"/>
                <TextView
                    android:id="@+id/tv_rejected_money"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/c_202020"
                    tools:text="退金额：100.00"/>
            </FrameLayout>
        </LinearLayout>
        <android.support.constraint.ConstraintLayout
            android:id="@+id/rl_right"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_9"
            app:layout_constraintLeft_toRightOf="@id/ll_left"
            app:layout_constraintTop_toBottomOf="@id/rl_top"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ic_tips"
            android:layout_marginBottom="@dimen/dp_7">
            <com.transpos.market.view.RoundButton
                android:id="@+id/btn_check"
                android:layout_width="@dimen/dp_34"
                android:layout_height="@dimen/dp_18"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:btnCornerRadius="@dimen/dp_2"
                app:btn_is_gradient="true"
                app:btn_gradient_orientation="left_right"
                app:btn_gradient_colors="#00B3FF,#00A1FF"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_8"
                android:text="@string/txt_goods_check"/>
            <EditText
                android:id="@+id/et_input"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btn_check"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="@dimen/dp_2"
                android:hint="@string/txt_goods_check_hint"
                android:textColorHint="@color/color_A3A3A3"
                android:textColor="@color/c_202020"
                android:textSize="@dimen/sp_8"
                android:padding="@dimen/dp_4"
                android:background="@drawable/shape_d2d2d2"/>
            <TextView
                android:id="@+id/tv_rejected_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_20"
                app:layout_constraintTop_toBottomOf="@id/et_input"
                android:layout_marginTop="@dimen/dp_5"
                android:textSize="@dimen/sp_9"
                android:gravity="center"
                android:text="@string/txt_goods_rejected_reason"
                android:textColor="@color/white"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_rejected_reason"
                app:layout_constraintTop_toBottomOf="@id/tv_rejected_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_9"/>
        </android.support.constraint.ConstraintLayout>
        <com.transpos.market.view.RoundButton
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/dp_92"
            android:layout_height="@dimen/dp_28"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="@dimen/dp_14"
            android:layout_marginBottom="@dimen/dp_7"
            android:text="@string/txt_goods_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13"
            app:btnCornerRadius="@dimen/dp_2"
            app:btn_is_gradient="true"
            app:btn_gradient_orientation="left_right"
            app:btn_gradient_colors="#AAAFB4,#BEC3C6"/>
        <com.transpos.market.view.RoundButton
            android:id="@+id/btn_confirm"
            android:layout_width="@dimen/dp_92"
            android:layout_height="@dimen/dp_28"
            app:layout_constraintRight_toLeftOf="@id/btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="@dimen/dp_11"
            android:layout_marginBottom="@dimen/dp_7"
            android:text="@string/txt_goods_confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13"
            app:btnCornerRadius="@dimen/dp_2"
            app:btn_is_gradient="true"
            app:btn_gradient_orientation="left_right"
            app:btn_gradient_colors="#FF3510,#FF582B"/>
        <com.transpos.market.view.RoundButton
            android:id="@+id/btn_all_check"
            android:layout_width="@dimen/dp_92"
            android:layout_height="@dimen/dp_28"
            app:layout_constraintRight_toLeftOf="@id/btn_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="@dimen/dp_11"
            android:layout_marginBottom="@dimen/dp_7"
            android:text="@string/txt_goods_allcheck"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13"
            app:btnCornerRadius="@dimen/dp_2"
            app:btn_is_gradient="true"
            app:btn_gradient_orientation="left_right"
            app:btn_gradient_colors="#00B3FF,#00A1FF"/>
        <ImageView
            android:id="@+id/ic_tips"
            android:layout_width="@dimen/dp_11"
            android:layout_height="@dimen/dp_11"
            android:src="@mipmap/ic_goods_rejected_tips"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_all_check"
            android:layout_marginLeft="@dimen/dp_14"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/ic_tips"
            android:layout_marginLeft="@dimen/dp_5"
            app:layout_constraintBottom_toTopOf="@id/btn_all_check"
            android:text="@string/txt_goods_tips"
            android:textColor="@color/color_A3A3A3"
            android:textSize="@dimen/sp_9"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>