<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/viw_actionbar_layout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_aim_paycode"
        android:textColor="@color/color_2F2F2F"
        android:textSize="@dimen/sp_30"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_103"/>
    <ImageView
        android:layout_width="@dimen/dp_335"
        android:layout_height="@dimen/dp_335"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_45"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_vip_scan_login"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_36"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:layout_width="@dimen/dp_87"
            android:layout_height="@dimen/dp_76"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_wx_pay"/>
        <ImageView
            android:layout_width="@dimen/dp_76"
            android:layout_height="@dimen/dp_76"
            android:scaleType="centerCrop"
            android:layout_marginLeft="@dimen/dp_55"
            android:src="@mipmap/ic_ali_pay"/>
        <ImageView
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_75"
            android:scaleType="centerCrop"
            android:layout_marginLeft="@dimen/dp_54"
            android:src="@mipmap/ic_scan_pay"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_22"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="@dimen/dp_92"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/sp_23"
            android:textColor="@color/color_2F2F2F"
            android:src="@mipmap/ic_wx_pay"
            android:text="@string/txt_wx_pay"/>
        <TextView
            android:layout_width="@dimen/dp_76"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/sp_23"
            android:text="@string/txt_alipay"
            android:textColor="@color/color_2F2F2F"
            android:layout_marginLeft="@dimen/dp_55"/>
        <TextView
            android:layout_width="@dimen/dp_75"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_vip_code"
            android:textSize="@dimen/sp_23"
            android:textColor="@color/color_2F2F2F"
            android:layout_marginLeft="@dimen/dp_54"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_47"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dp_15"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_11"
        android:paddingRight="@dimen/dp_11"
        android:layout_marginBottom="@dimen/dp_80">
        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_21"
            android:src="@mipmap/ic_back"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:layout_marginLeft="@dimen/dp_4"
            android:text="@string/txt_retry_pay"/>
    </LinearLayout>
</LinearLayout>