<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include layout="@layout/viw_actionbar_layout"/>

    <com.transpos.sale.view.RoundButton
        android:id="@+id/tv_count_timer"
        android:layout_width="@dimen/dp_29"
        android:layout_height="@dimen/dp_29"
        app:btnCornerRadius="stadium"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_24"
        app:btn_normalSolidColor="@color/color_DFE1E5"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:text="05"/>

    <ImageView
        android:layout_width="@dimen/dp_121"
        android:layout_height="@dimen/dp_121"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_pay_ok"
        android:layout_marginTop="@dimen/dp_115"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pay_ok"
        android:textSize="39sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_42"
        android:textColor="@color/color_2F2F2F"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pay_ok_tips"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_13"
        android:textSize="@dimen/sp_19"
        android:textColor="@color/color_A9B1C1"/>
    <com.transpos.sale.view.RoundButton
        android:id="@+id/btn_back_home"
        android:layout_width="@dimen/dp_256"
        android:layout_height="@dimen/dp_46"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_140"
        app:btnCornerRadius="@dimen/dp_4"
        app:btn_is_gradient="true"
        android:textColor="@color/white"
        android:text="@string/txt_back_home"
        app:btn_gradient_orientation="left_right"
        app:btn_gradient_colors="#FFB200,#FF7B00"/>
</LinearLayout>